Thêm tính năng: partial view, đăng xuất

--- a/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
 <body>
     <div id="wrapper">
         <!-- Navigation -->
-        @*@RenderPage("_Navigation.cshtml")*@
+        @RenderPage("_Navigation.cshtml")
         <!-- Page Content -->
         <div id="page-wrapper">
             <div class="container-fluid">
