--- a/WebApp/Areas/Admin/Views/Employee/Create.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Create.cshtml
@@ -22,11 +22,11 @@
     </script>
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Employee", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    @Html.AntiForgeryToken()
+                @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
+            <div class="form-horizontal">
     <h4>Employee</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -57,8 +57,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.TextBoxFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
-            <button id="btnSelectImage">Chọn ảnh</button>
+            @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", @type = "file" } })
             @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
         </div>
     </div>
