Hoàn thành việc xuất ra danh sách nhân viên, tối ưu hóa image lưu vào db.

--- a/WebApp/Areas/Admin/Views/User/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/User/Index.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-@*@section jsFooter{
+@section jsFooter{
         <script src="/assets/admin/js/controller/userController.js"></script>
-    }*@
+    }
 <div class="row">
 
     <div class="col-lg-12">
