Thêm tính năng: Sửa thông tin nhân viên.

--- a/WebApp/Areas/Admin/Views/Employee/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Index.cshtml
@@ -50,7 +50,7 @@
                                 <td>@item.Phone</td>
                                 <td>@item.Birthday</td>
                                 <td>
-                                    <a href="/Admin/User/Edit/@item.ID">Sửa</a>
+                                    <a href="/Admin/Employee/Edit/@item.ID">Sửa</a>
                                     |
                                     @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
                                {
