--- a/WebApp/Areas/Admin/Views/User/Edit.cshtml
+++ b/WebApp/Areas/Admin/Views/User/Edit.cshtml
@@ -68,6 +68,9 @@
                                     <input type="submit" value="Cập nhật" class="btn btn-default" />
                                 </div>
                             </div>
+                            <div>
+                                @Html.ActionLink("Back to List", "Index")
+                            </div>
                         }
                     </div>
                 </div>
