--- a/WebApp/Areas/Admin/Views/Employee/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Index.cshtml
@@ -34,32 +34,41 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-
+                                <th>Mã nhân viên</th>
                                 <th>Họ tên</th>
+                                <th>Tài khoản</th>
                                 <th>Hình ảnh</th>
                                 <th>Số điện thoại</th>
                                 <th>Ngày sinh</th>
+                                <td>Giờ vào ca</td>
+                                <td>Giờ kết ca</td>
+                                <td>Số ngày đã nghỉ</td>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var item in Model)
                             {
-                            <tr id="row_@item.ID">
-                                <td>@item.Name</td>
-                                <td><img src="@item.Image" width="100px"/></td>
-                                <td>@item.Phone</td>
-                                <td>@item.Birthday</td>
-                                <td>
-                                    <a href="/Admin/Employee/Edit/@item.ID">Sửa</a>
-                                    |
-                                    @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
-                               {
-                                   Confirm = "Bạn có muốn xoá bản ghi này?",
-                                   OnComplete = "$('#row_" + @item.ID + "').remove()",
-                                   HttpMethod = "Delete"
-                               })
-                                </td>
-                            </tr>
+                                <tr id="row_@item.ID">
+                                    <td>@item.Code</td>
+                                    <td>@item.Name</td>
+                                    <td>@item.Username</td>
+                                    <td><img src="@item.Image" width="100px" /></td>
+                                    <td>@item.Phone</td>
+                                    <td>@item.Birthday</td>
+                                    <td>@item.TimeStart</td>
+                                    <td>@item.TimeOut</td>
+                                    <td>@item.NumberOfDayOff</td>
+                                    <td>
+                                        <a href="/Admin/Employee/Edit/@item.ID">Sửa</a>
+                                        |
+                                        @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
+                                   {
+                                       Confirm = "Bạn có muốn xoá bản ghi này?",
+                                       OnComplete = "$('#row_" + @item.ID + "').remove()",
+                                       HttpMethod = "Delete"
+                                   })
+                                    </td>
+                                </tr>
                             }
 
 
