--- a/WebApp/Areas/Admin/Views/Employee/Create.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Create.cshtml
@@ -57,7 +57,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", @type = "file" } })
+            @Html.TextBoxFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", @id="txtImage" } })
             @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
         </div>
     </div>
