--- a/WebApp/Areas/Admin/Views/Home/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-
-<h2>This is Index of Admin</h2>
+@section header{
+    This is Index of Admin
+}
 
