--- a/WebApp/Areas/Admin/Views/Employee/Edit.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Edit.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-
+@section header{
+    Cập nhật người dùng
+}
 @section jsFooter{
     <script>
         $('#btnSelectImage').on('click', function (e) {
