--- a/WebApp/Areas/Admin/Views/Login/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Login/Index.cshtml
@@ -1,4 +1,11 @@
 ﻿@model WebApp.Areas.Admin.Models.LoginModel
+@{
+    ViewBag.Title = "Đăng nhập";
+    Layout = "";
+}
+@section header{
+    Sing in
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,7 +48,7 @@
                                 </div>
                                 <div class="form-group">
                                     @Html.PasswordFor(model => model.PassWord, new { @class = "form-control" })
-                                </div>                                
+                                </div>
                                 <div class="checkbox">
                                     <label>
                                         @Html.CheckBoxFor(model => model.RememberMe)Remember Me
