--- a/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿﻿<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>THH - Testing</title>
+    <title>SB Admin 2 - Bootstrap Admin Theme</title>
     <!-- Bootstrap Core CSS -->
     <link href="/assets/admin/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/client/css/font-awesome.min.css" rel="stylesheet" />
@@ -32,7 +32,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        @*<h1 class="page-header">@RenderSection("header", required: true)</h1>*@
+                        <h1 class="page-header">@RenderSection("header", required: true)</h1>
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
@@ -61,7 +61,6 @@
     <script src="/assets/admin/bower_components/metisMenu/dist/metisMenu.min.js"></script>
     <script src="/assets/admin/js/plugins/ckfinder/ckfinder.js"></script>
     <script src="/assets/admin/js/plugins/ckeditor/ckeditor.js"></script>
-
     <!-- Custom Theme JavaScript -->
     <script src="/assets/admin/dist/js/sb-admin-2.js"></script>
     @RenderSection("jsFooter", required: false)
