--- a/WebApp/Areas/Admin/Views/Shared/401.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/401.cshtml
@@ -3,7 +3,10 @@
     ViewBag.Title = "View";
     Layout = "~/Areas/Admin/Views/Shared/_Layouts.cshtml";
 }
-<h2>Lỗi không có quyền</h2>
+@section header{
+
+    Lỗi không có quyền
+}
 
 <div class="alert alert-danger">
     Bạn không có quyền truy cập.
