--- a/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
@@ -257,9 +257,9 @@
                 <li>
                     <a href="#"><i class="fa fa-user fa-fw"></i> Hệ thống<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
-                        @*<li>
-                            <a href="/Admin/UserGroup/Index">Nhóm người dùng</a>
-                        </li>*@
+                        <li>
+                            <a href="/Admin/ListvsTaxi/Index">Bảng kê</a>
+                        </li>
                         <li>
                             <a href="/Admin/Employee/Index">Nhân viên</a>
                         </li>
