tạo mới mvc: DailyList, DayOff, Violator. Sửa lại mvc Employee.

--- a/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+        <a class="navbar-brand" href="index.html">MassageVua WebApp v1.0</a>
     </div>
     <!-- /.navbar-header -->
     <ul class="nav navbar-top-links navbar-right">
@@ -258,10 +258,16 @@
                     <a href="#"><i class="fa fa-user fa-fw"></i> Hệ thống<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a href="/Admin/ListvsTaxi/Index">Bảng kê</a>
+                            <a href="/Admin/DailyList/Index">Bảng kê</a>
                         </li>
                         <li>
                             <a href="/Admin/Employee/Index">Nhân viên</a>
+                        </li>
+                        <li>
+                            <a href="/Admin/Violator/Index">Vi phạm/Tạm ứng</a>
+                        </li>
+                        <li>
+                            <a href="/Admin/DayOff/Index">Xin nghỉ phép</a>
                         </li>
                     </ul>
                     <!-- /.nav-second-level -->
