--- a/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
@@ -1,24 +1,25 @@
-﻿@model PagedList.IPagedList<Model.EF.Employee>
+﻿@model PagedList.IPagedList<Model.EF.DailyList>
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layouts.cshtml";
 }
 @section header{
-    Danh sách người dùng
+    Danh sách bảng kê
 }
+
 <div class="row">
 
     <div class="col-lg-12">
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                Danh sách người dùng
+                Danh sách bảng kê
             </div>
 
             <!-- /.panel-heading -->
             <div class="panel-body">
-                @using (Html.BeginForm("Index", "Employee", FormMethod.Get))
+                @using (Html.BeginForm("Index", "DailyList", FormMethod.Get))
                 {
                     <div class="row form-group">
                         <div class="col-lg-12">
@@ -27,7 +28,7 @@
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
-                                <a class="btn btn-primary" href="/Admin/Employee/Create">Thêm mới</a>
+                                <a class="btn btn-primary" href="/Admin/DailyList/Create">Thêm mới</a>
                             </div>
                         </div>
                     </div>
@@ -37,35 +38,48 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>Mã nhân viên</th>
-                                <th>Họ tên</th>
-                                <th>Tài khoản</th>
-                                <th>Hình ảnh</th>
-                                <th>Số điện thoại</th>
-                                <th>Ngày sinh</th>
-                                <td>Giờ vào ca</td>
-                                <td>Giờ kết ca</td>
-                                <td>Số ngày đã nghỉ</td>
-                                <td>Trạng thái tài khoản</td>
+                                <th>KTV</th>
+                                <td>Phòng</td>
+                                <td>Giờ vào</td>
+                                <td>Giờ ra</td>
+                                <td>Giá vé</td>
+                                <td>Tip</td>
+                                <td>Code</td>
+                                <td>Taxi-Grab: Hoa hồng</td>
+                                <td>Taxi-Grab: Số tiền</td>
+                                <td>Yêu cầu</td>
+                                <td>Xác nhận</td>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var item in Model)
                             {
                             <tr id="row_@item.ID">
-                                <td>@item.Code</td>
-                                <td>@item.Name</td>
-                                <td>@item.Username</td>
-                                <td><img src="@item.Image" width="100px" /></td>
-                                <td>@item.Phone</td>
-                                <td>@item.Birthday</td>
-                                <td>@item.TimeStart</td>
+                                <td>@item.Employee_Code</td>
+                                <td>@item.Room</td>
+                                <td>@item.TimeIn</td>
                                 <td>@item.TimeOut</td>
-                                <td>@item.DayOffs.Where(c => c.Employee_ID == item.ID).ToList().Count()</td>
-                                @*<td>@item.NumberOfDayOff</td>*@
-                                <td><a href="#" class="btn-active" data-id="@item.ID">@Html.Raw(item.StatusAccount ? "<strong>Kích hoạt</strong>" : "Khoá")</a></td>
+                                <td>@item.Ticket</td>
+                                <td>@item.Tip</td>
+                                <td>@item.Code</td>
+
+                                @{
+                                    if (item.Taxi_ID != null)
+                                    {
+                                    <td>@item.Taxi.Commission</td>
+                                    <td>@item.Taxi.Price</td>
+                                    }
+                                    else
+                                    {
+                                        <td></td>
+                                        <td></td>
+                                    }
+                                }
+
+                                <td>@item.Description</td>
+                                <td>@item.Status</td>
                                 <td>
-                                    <a href="/Admin/Employee/Edit/@item.ID">Sửa</a>
+                                    <a href="/Admin/DailyLust/Edit/@item.ID">Sửa</a>
                                     |
                                     @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
                                {
