--- a/WebApp/Areas/Admin/Views/DayOff/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/DayOff/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedList.IPagedList<Model.EF.DailyList>
+﻿@model PagedList.IPagedList<Model.EF.DayOff>
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "Index";
@@ -6,6 +6,7 @@
 }
 
 @section header{
+    Danh sách xin nghỉ
 }
 
 <div class="row">
@@ -14,12 +15,12 @@
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                Danh sách bang ke
+                Danh sách xin nghỉ
             </div>
 
             <!-- /.panel-heading -->
             <div class="panel-body">
-                @using (Html.BeginForm("Index", "ListvsTaxi", FormMethod.Get))
+                @using (Html.BeginForm("Index", "DayOff", FormMethod.Get))
                 {
                     <div class="row form-group">
                         <div class="col-lg-12">
@@ -28,7 +29,7 @@
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
-                                <a class="btn btn-primary" href="/Admin/ListvsTaxi/Create">Thêm mới</a>
+                                <a class="btn btn-primary" href="/Admin/DayOff/Create">Thêm mới</a>
                             </div>
                         </div>
                     </div>
@@ -38,30 +39,24 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>KTV</th>
-                                <th>Phòng</th>
-                                <th>Giờ vào</th>
-                                <th>Giờ ra</th>
-                                <th>Giá vé</th>
-                                <th>Tổng tiền</th>
-                                <td>Yêu cầu</td>
-                                <td>Xác nhận</td>
+                                <th>Ngày</th>
+                                <td>Mã nhân viên</td>
+                                <td>Lý do</td>
+                                <td>Trạng thái</td>
+                                <td>Tạo bởi</td>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var item in Model)
                             {
                                 <tr id="row_@item.ID">
-                                    <td>@item.Employee_Code</td>
-                                    <td>@item.Room</td>
-                                    <td>@item.TimeIn</td>
-                                    <td>@item.TimeOut</td>
-                                    <td>@item.Ticket</td>
-                                    <td>@item.Total</td>
+                                    <td>@item.Date</td>
+                                    <td>@item.Employee.Code</td>
                                     <td>@item.Description</td>
                                     <td>@item.Status</td>
+                                    <td>@item.CreatedBy</td>
                                     <td>
-                                        <a href="/Admin/ListvsTaxi/Edit/@item.ID">Sửa</a>
+                                        <a href="/Admin/DayOff/Edit/@item.ID">Sửa</a>
                                         |
                                         @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
                                    {
@@ -84,3 +79,4 @@
         </div>
     </div>
 </div>
+<p>
