--- a/WebApp/Areas/Admin/Views/Shared/_Layouts.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Layouts.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+    <title>MassageVua</title>
     <!-- Bootstrap Core CSS -->
     <link href="/assets/admin/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/client/css/font-awesome.min.css" rel="stylesheet" />
