Hoàn thành đầy đủ bảng - Thêm Data Anotations vào các class trong EF.

--- a/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">MassageVua WebApp v1.0</a>
+        <a class="navbar-brand" href="#">MassageVua v1.0</a>
     </div>
     <!-- /.navbar-header -->
     <ul class="nav navbar-top-links navbar-right">
@@ -261,10 +261,19 @@
                             <a href="/Admin/DailyList/Index">Bảng kê</a>
                         </li>
                         <li>
+                            <a href="/Admin/DailyList/TaxiIndex">Thông tin Grab-Taxi</a>
+                        </li>
+                        <li>
                             <a href="/Admin/Employee/Index">Nhân viên</a>
                         </li>
                         <li>
-                            <a href="/Admin/Violator/Index">Vi phạm/Tạm ứng</a>
+                            <a href="/Admin/Violator/Index">Chấm công nhân viên</a>
+                        </li>
+                        <li>
+                            <a href="/Admin/ViolatorKTV/Index">Chấm công KTV</a>
+                        </li>
+                        <li>
+                            <a href="/Admin/RevenueExpenditure/Index">Thu - Chi</a>
                         </li>
                         <li>
                             <a href="/Admin/DayOff/Index">Xin nghỉ phép</a>
