--- a/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
@@ -38,7 +38,8 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>KTV</th>
+                                <th>ID</th>
+                                <td>KTV</td>
                                 <td>Phòng</td>
                                 <td>Giờ vào</td>
                                 <td>Giờ ra</td>
@@ -47,6 +48,7 @@
                                 <td>Code</td>
                                 <td>Taxi-Grab: Hoa hồng</td>
                                 <td>Taxi-Grab: Số tiền</td>
+                                <td>Tổng tiền</td>
                                 <td>Yêu cầu</td>
                                 <td>Xác nhận</td>
                             </tr>
@@ -55,7 +57,8 @@
                             @foreach (var item in Model)
                             {
                             <tr id="row_@item.ID">
-                                <td>@item.Employee_Code</td>
+                                <th>@item.ID</th>
+                                <td>@item.Employee.Code</td>
                                 <td>@item.Room</td>
                                 <td>@item.TimeIn</td>
                                 <td>@item.TimeOut</td>
@@ -66,20 +69,22 @@
                                 @{
                                     if (item.Taxi_ID != null)
                                     {
-                                    <td>@item.Taxi.Commission</td>
-                                    <td>@item.Taxi.Price</td>
+                                        <td>@item.Taxi.Commission</td>
+                                        <td>@item.Taxi.Price</td>
+                                        <td>@(item.Ticket+item.Tip-item.Code-item.Taxi.Commission)</td>
                                     }
                                     else
                                     {
                                         <td></td>
                                         <td></td>
+                                        <td>@(item.Ticket+item.Tip-item.Code)</td>
                                     }
                                 }
 
                                 <td>@item.Description</td>
                                 <td>@item.Status</td>
                                 <td>
-                                    <a href="/Admin/DailyLust/Edit/@item.ID">Sửa</a>
+                                    <a href="/Admin/DailyList/Edit/@item.ID">Sửa</a>
                                     |
                                     @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
                                {
