--- a/WebApp/Areas/Admin/Views/DailyList/TaxiIndex.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/TaxiIndex.cshtml
@@ -1,12 +1,12 @@
-﻿@model PagedList.IPagedList<Model.EF.Violator>
+﻿@model PagedList.IPagedList<Model.EF.DailyList>
 @using PagedList.Mvc;
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "TaxiIndex";
     Layout = "~/Areas/Admin/Views/Shared/_Layouts.cshtml";
 }
 
 @section header{
-    Danh sách vi phạm/tạm ứng
+    Danh sách Taxi-Grab-CTV
 }
 
 <div class="row">
@@ -15,12 +15,12 @@
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                Danh sách vi phạm/tạm ứng
+                Danh sách Taxi-Grab-CTV
             </div>
 
             <!-- /.panel-heading -->
             <div class="panel-body">
-                @using (Html.BeginForm("Index", "Violator", FormMethod.Get))
+                @using (Html.BeginForm("TaxiIndex", "DailyList", FormMethod.Get))
                 {
                     <div class="row form-group">
                         <div class="col-lg-12">
@@ -29,7 +29,7 @@
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
-                                <a class="btn btn-primary" href="/Admin/Violator/Create">Thêm mới</a>
+                                <a class="btn btn-primary" href="/Admin/DailyList/Create">Thêm mới</a>
                             </div>
                         </div>
                     </div>
@@ -39,31 +39,31 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>Mã nhân viên</th>
-                                <td>Loại</td>
-                                <td>Số tiền</td>
+                                <th>ID bảng kê</th>
+                                <td>Mã tài xế</td>
+                                <td>SĐT</td>
+                                <td>Hoa hồng</td>
+                                <td>Phí vận chuyển</td>
                                 <td>Ghi chú</td>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var item in Model)
                             {
-                                <tr id="row_@item.ID">
-                                    <td>@item.Employee.Code</td>
-                                    <td>@item.Type</td>
-                                    <td>@item.Loan</td>
-                                    <td>@item.Description</td>
-                                    <td>
-                                        <a href="/Admin/Violator/Edit/@item.ID">Sửa</a>
-                                        |
-                                        @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
-                                   {
-                                       Confirm = "Bạn có muốn xoá bản ghi này?",
-                                       OnComplete = "$('#row_" + @item.ID + "').remove()",
-                                       HttpMethod = "Delete"
-                                   })
-                                    </td>
-                                </tr>
+
+                                
+                                    if (item.Taxi_ID != null)
+                                    {
+                                        <tr id="row_@item.ID">
+                                            <th>@item.ID</th>
+                                            <td>@item.Taxi.Code</td>
+                                            <td>@item.Taxi.Phone</td>
+                                            <td>@item.Taxi.Commission</td>
+                                            <td>@item.Taxi.Price</td>
+                                            <td>@item.Taxi.Description</td>
+                                        </tr>
+                                    }
+                            
                             }
 
 
