--- a/WebApp/Areas/Admin/Views/Employee/Edit.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Edit.cshtml
@@ -55,8 +55,7 @@
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
+                                        @Model.Code
                                     </div>
                                 </div>
 
@@ -169,8 +168,7 @@
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+                                        @Model.Username
                                     </div>
                                 </div>
 
