--- a/WebApp/Areas/Admin/Views/RevenueExpenditure/Create.cshtml
+++ b/WebApp/Areas/Admin/Views/RevenueExpenditure/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Model.EF.Violator
+﻿@model Model.EF.RevenueExpenditure
 
 @{
     ViewBag.Title = "Create";
@@ -6,31 +6,38 @@
 }
 
 @section header{
-    Tạo mới vi phạm/tạm ứng
-}
+    Tạo mới khoản Thu-Chi
+    }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
-        <h4>Violator</h4>
+        <h4>RevenueExpenditure</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-           <div class="form-group">
-               @Html.LabelFor(model => model.Employee_ID, htmlAttributes: new { @class = "control-label col-md-2" })
-               <div class="col-md-10">
-                   @*@Html.DropDownList("ProcedureID", ViewBag.CategoryID as SelectList, new { @class = "form-data" })*@
-                   @Html.DropDownListFor(model => model.Employee_ID, null, new { htmlAttributes = new { @class = "form-control" } })
-                   @Html.ValidationMessageFor(model => model.Employee_ID, "", new { @class = "text-danger" })
-               </div>
-           </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Type, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Contents, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Contents, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Contents, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Money, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Money, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Money, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -43,12 +50,12 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Loan, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Loan, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Loan, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Date)
+                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
-        </div>  
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
