--- a/WebApp/Areas/Admin/Views/RevenueExpenditure/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/RevenueExpenditure/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedList.IPagedList<Model.EF.Violator>
+﻿@model PagedList.IPagedList<Model.EF.RevenueExpenditure>
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "Index";
@@ -6,7 +6,7 @@
 }
 
 @section header{
-    Danh sách vi phạm/tạm ứng
+    Danh sách Thu-Chi
 }
 
 <div class="row">
@@ -15,12 +15,12 @@
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                Danh sách vi phạm/tạm ứng
+                Danh sách Thu-Chi
             </div>
 
             <!-- /.panel-heading -->
             <div class="panel-body">
-                @using (Html.BeginForm("Index", "Violator", FormMethod.Get))
+                @using (Html.BeginForm("Index", "RevenueExpenditure", FormMethod.Get))
                 {
                     <div class="row form-group">
                         <div class="col-lg-12">
@@ -29,7 +29,7 @@
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
-                                <a class="btn btn-primary" href="/Admin/Violator/Create">Thêm mới</a>
+                                <a class="btn btn-primary" href="/Admin/RevenueExpenditure/Create">Thêm mới</a>
                             </div>
                         </div>
                     </div>
@@ -39,8 +39,10 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>Mã nhân viên</th>
-                                <td>Loại</td>
+                                <td>STT</td>
+                                <td>Ngày</td>
+                                <th>Loại</th>
+                                <td>Nội dung</td>
                                 <td>Số tiền</td>
                                 <td>Ghi chú</td>
                             </tr>
@@ -49,12 +51,14 @@
                             @foreach (var item in Model)
                             {
                                 <tr id="row_@item.ID">
-                                    <td>@item.Employee.Code</td>
+                                    <td>@item.ID</td>
+                                    <td>@item.Date</td>
                                     <td>@item.Type</td>
-                                    <td>@item.Loan</td>
+                                    <td>@item.Contents</td>
+                                    <td>@item.Money</td>
                                     <td>@item.Description</td>
                                     <td>
-                                        <a href="/Admin/Violator/Edit/@item.ID">Sửa</a>
+                                        <a href="/Admin/RevenueExpenditure/Edit/@item.ID">Sửa</a>
                                         |
                                         @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
                                    {
