--- a/WebApp/Areas/Admin/Views/Shared/401.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/401.cshtml
@@ -1,12 +1,12 @@
 ﻿
 @{
     ViewBag.Title = "View";
-    Layout = "~/Areas/Admin/Views/Shared/_Layouts.cshtml";
+    Layout = null;
 }
-@section header{
+@*@section header{
 
     Lỗi không có quyền
-}
+}*@
 
 <div class="alert alert-danger">
     Bạn không có quyền truy cập.
