--- a/WebApp/Areas/Admin/Views/ViolatorKTV/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/ViolatorKTV/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedList.IPagedList<Model.EF.Violator>
+﻿@model PagedList.IPagedList<Model.EF.ViolatorKTV>
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "Index";
@@ -20,7 +20,7 @@
 
             <!-- /.panel-heading -->
             <div class="panel-body">
-                @using (Html.BeginForm("Index", "Violator", FormMethod.Get))
+                @using (Html.BeginForm("Index", "ViolatorKTV", FormMethod.Get))
                 {
                     <div class="row form-group">
                         <div class="col-lg-12">
@@ -29,7 +29,7 @@
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
-                                <a class="btn btn-primary" href="/Admin/Violator/Create">Thêm mới</a>
+                                <a class="btn btn-primary" href="/Admin/ViolatorKTV/Create">Thêm mới</a>
                             </div>
                         </div>
                     </div>
@@ -42,6 +42,7 @@
                                 <th>Mã nhân viên</th>
                                 <td>Loại</td>
                                 <td>Số tiền</td>
+                                <td>Thế chân</td>
                                 <td>Ghi chú</td>
                             </tr>
                         </thead>
@@ -50,11 +51,12 @@
                             {
                                 <tr id="row_@item.ID">
                                     <td>@item.Employee.Code</td>
-                                    <td>@item.Type</td>
-                                    <td>@item.Loan</td>
+                                    <td>@item.Tour</td>
+                                    <td>@item.Fruit</td>
+                                    <td>@item.Substitution</td>
                                     <td>@item.Description</td>
                                     <td>
-                                        <a href="/Admin/Violator/Edit/@item.ID">Sửa</a>
+                                        <a href="/Admin/ViolatorKTV/Edit/@item.ID">Sửa</a>
                                         |
                                         @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
                                    {
