Cập nhật, sửa lỗi: - Tạo thêm 2 bảng Type - Sửa 1 số lỗi.

--- a/WebApp/Areas/Admin/Views/RevenueExpenditure/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/RevenueExpenditure/Index.cshtml
@@ -53,7 +53,7 @@
                                 <tr id="row_@item.ID">
                                     <td>@item.ID</td>
                                     <td>@item.Date</td>
-                                    <td>@item.Type</td>
+                                    <td>@item.ReExType.Type</td>
                                     <td>@item.Contents</td>
                                     <td>@item.Money</td>
                                     <td>@item.Description</td>
