--- a/WebApp/Areas/Admin/Views/Violator/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Violator/Index.cshtml
@@ -50,7 +50,7 @@
                             {
                                 <tr id="row_@item.ID">
                                     <td>@item.Employee.Code</td>
-                                    <td>@item.Type</td>
+                                    <td>@item.ViolatorType.Type</td>
                                     <td>@item.Loan</td>
                                     <td>@item.Description</td>
                                     <td>
