--- a/WebApp/Areas/Admin/Views/Home/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layouts.cshtml";
 }
 @section header{
-    This is Index of Admin
+    This is Index of Admin.
 }
 
