--- a/WebApp/Areas/Admin/Views/Shared/401.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/401.cshtml
@@ -11,3 +11,6 @@
 <div class="alert alert-danger">
     Bạn không có quyền truy cập.
 </div>
+<div>
+    @Html.ActionLink("Đăng nhập", "Index","Home")
+</div>
