Cập nhật: - Hoàn thành việc mã hóa mật khẩu bằng hàm hash và sailt từ bộ Nuget: System.Web.Helpers

--- a/WebApp/Areas/Admin/Views/Employee/Edit.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Edit.cshtml
@@ -47,7 +47,7 @@
                             <div class="form-group">
                                 @Html.LabelFor(model => model.Department_ID, htmlAttributes: new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
-                                    @Model.Department
+                                    @Model.Department.Name
                                 </div>
                             </div>
 
