--- a/WebApp/Areas/Admin/Views/Shared/_Layouts.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Layouts.cshtml
@@ -16,6 +16,7 @@
     <link href="/assets/admin/dist/css/sb-admin-2.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="/assets/admin/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="~/Content/bootstrap-chosen.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -54,6 +55,7 @@
     <!-- jQuery -->
     <script src="/assets/admin/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/Scripts/chosen.jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="/assets/admin/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
