--- a/WebApp/Areas/Admin/Views/DailyList/Edit.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/Edit.cshtml
@@ -76,10 +76,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Voucher, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Discount, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Voucher, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Voucher, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Discount, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Discount, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -140,10 +140,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Total, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Request, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Total, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Total, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Request, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Request, "", new { @class = "text-danger" })
         </div>
     </div>
 
